logs/dockbot.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/dockbot'...
Compiling './lib/python3.5/site-packages/dockbot/Container.py'...
***   File "./lib/python3.5/site-packages/dockbot/Container.py", line 65
    print json.dumps(config, indent = 4, separators = (',', ': '))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockbot/Dockbot.py'...
***   File "./lib/python3.5/site-packages/dockbot/Dockbot.py", line 50
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockbot/Image.py'...
***   File "./lib/python3.5/site-packages/dockbot/Image.py", line 176
    if dockbot.args.verbose: print '%s -> %s' % (path, target)
                                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockbot/Slave.py'...
***   File "./lib/python3.5/site-packages/dockbot/Slave.py", line 25
    if dockbot.args.verbose: print 'triggering', url
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/dockbot/__init__.py'...
***   File "./lib/python3.5/site-packages/dockbot/__init__.py", line 91
    except dockbot.Error, e:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockbot/data'...
Listing './lib/python3.5/site-packages/dockbot/data/lib'...
Listing './lib/python3.5/site-packages/dockbot/data/master'...
Compiling './lib/python3.5/site-packages/dockbot/data/master/github-hook.py'...
***   File "./lib/python3.5/site-packages/dockbot/data/master/github-hook.py", line 47
    print 'Connect failed: ' + error.getErrorMessage()
                           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockbot/data/master/master.py'...
***   File "./lib/python3.5/site-packages/dockbot/data/master/master.py", line 161
    raise Exception, "Detected cycle in builder dependencies."
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockbot/data/master/public_html'...
Compiling './lib/python3.5/site-packages/dockbot/github.py'...
***   File "./lib/python3.5/site-packages/dockbot/github.py", line 39
    print json.dumps(data, indent = 2, separators = (',', ': '))
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/dockbot/publish.py'...
***   File "./lib/python3.5/site-packages/dockbot/publish.py", line 38
    umask = os.umask(0777)
                        ^
SyntaxError: invalid token

Compiling './lib/python3.5/site-packages/dockbot/util.py'...
***   File "./lib/python3.5/site-packages/dockbot/util.py", line 34
    print '%s%s%s[%s]%s' % (
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dockbot-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
